--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -11,7 +11,7 @@
 } 
 
 .page-body { 
-    width: var( --page-inner-width ); 
+    /* width: var( --page-inner-width );  */ 
     margin-left: auto; margin-right: auto; 
     /* text-align: center;  */ 
 } 
