--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -1,8 +1,8 @@
 @import url( "./page.css" ); 
 
 .section {  
-    max-width: var( --page-inner-width ); 
-    margin-left: auto; margin-right: auto; 
+    /* max-width: var( --page-inner-width );  */ 
+    /* margin-left: auto; margin-right: auto;  */
     margin-bottom: var( --section-margin-bottom ); 
     /* text-align: center;  */ 
 } 
